# FindSurface-BasicDemo-Windows-Linux

./: CMakeLists.txt  README.md
src/c/: CMakeLists.txt  main.c  pointcloud.c  pointcloud.h
src/cpp/: CMakeLists.txt  helper.hpp  main.cpp  pointcloud.cpp  pointcloud.hpp
